@@ -6,6 +6,7 @@ Bugs fixed:
 - 1605522 added warning of no yacc or lex found
 - 1614898 mofc coredumps for instance of undefined class
 - 1601274 new option --enable-namespace-kludge for legacy __namespace classes
+- 1624528 sfcb getclass doesn't return methods
 
 Changes in 0.8.0
 ================
