@@ -1,3 +1,8 @@
+2007-01-03  Sven Schuetz
+
+	* backend_sfcb:
+	Partially fixed 1624528: sfcb getclass doesn't return methods
+
 2006-12-20  Viktor Mihajlovski  <mihajlov@localhost.localdomain>
 
 	* backend_sfcb.c, configure.ac, symtab.c: 
